fix setup login with facebook

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
+
+
+KEY_ALIAS = myappkey
+KEY_PASSWORD = sembarang
+STORE_PASSWORD = sembarang
