--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,6 +44,15 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+       signingConfigs {
+        release {
+            keyAlias KEY_ALIAS
+            keyPassword KEY_PASSWORD
+            storeFile file('../my-app-key.keystore')
+            storePassword STORE_PASSWORD
+        }
+    }
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.flutter_login_sosmed"
@@ -70,4 +79,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.facebook.android:facebook-login:latest.release'
+
 }
