--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.3
   flutter_facebook_auth: ^5.0.11
+  flutter_svg: ^2.0.6
   google_sign_in: ^6.1.3
 
 dev_dependencies:
@@ -23,3 +24,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/icons/
